Bug 691871 - Search and replace mistake in gdevcups
Summary: Search and replace mistake in gdevcups
Status: RESOLVED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: CUPS driver (show other bugs)
Version: 9.00
Hardware: PC Linux
: P4 normal
Assignee: Till Kamppeter
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-01-07 12:46 UTC by Tim Waugh
Modified: 2011-01-07 14:07 UTC (History)
3 users (show)

See Also:
Customer:
Word Size: ---


Attachments
ghostscript-gdevcups-profile.patch (530 bytes, patch)
2011-01-07 12:46 UTC, Tim Waugh
Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Tim Waugh 2011-01-07 12:46:46 UTC
Created attachment 7100 [details]
ghostscript-gdevcups-profile.patch

It looks like a search and replace operation got carried away.  Surely the parameter string is "cupsProfile", not "cups->Profile".
Comment 1 Till Kamppeter 2011-01-07 14:07:11 UTC
Fixed in SVN rev. 12006. Thanks for the report.