Fixed search-and-replace error in "cups" output device, bug 691871.

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@12006 a1074d23-0009-0410-80fe-cf8c14f379e6